# html_chunking

./: LICENSE  README.md  html_chunking.py  pyproject.toml  test.py
cases/: Andrej-Karpathy-YouTube.html  My-Repositories-Github.html  Transfusion-Arxiv.html  lebron-james-Google-Search.html
src/html_chunking/: html_chunking.py
