[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html_chunking"
version = "0.0.1"
authors = [
  { name="Jiarun Liu", email="liujiarun01@126.com" },
]
maintainers = [
  { name="Jiarun Liu", email="liujiarun01@126.com" },
]
description = "A Python package for token-aware HTML chunking that preserves structure and attributes, with optional cleaning and attribute length control."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>4.12.0",
    "cssutils>2.11.0",
    "tiktoken>0.5.0",
]

[project.urls]
Homepage = "https://github.com/KLGR123/html_chunking"
Issues = "https://github.com/KLGR123/html_chunking"